results styles @ 90% - to solve: missing covers

--- a/src/components/search/Results/Results.scss
+++ b/src/components/search/Results/Results.scss
@@ -15,3 +15,7 @@
     justify-content: center;
     margin: 5px
 }
+
+.button {
+    margin: 5px
+}
